--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 									<span class="badge bg-info">Bootstrap</span>
 								</div>
 								<a
-									href="services-platform/index.php"
+									href="services-platform/index.html"
 									class="btn btn-outline-primary w-100"
 									target="_blank"
 									>Pogledaj Projekat</a
@@ -582,6 +582,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
+
 
 
 
