--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
 									prikazom statistike posetilaca.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-secondary">CSS</span>
 									<span class="badge bg-info">JavaScript</span>
 									
 								</div>
@@ -582,6 +582,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
+
 
 
 
