--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 									<span class="badge bg-info">Bootstrap</span>
 									
 								</div>
-								<a href="pravoslavni-kalendar/index.php" class="btn btn-outline-primary w-100" target="_blank">
+								<a href="pravoslavni-kalendar/index.html" class="btn btn-outline-primary w-100" target="_blank">
 									Pogledaj Projekat
 								</a>
 							</div>
@@ -582,6 +582,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
+
 
 
 
