--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
 									korisničkim rolama.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
 									href="Blog_System/index.html"
@@ -252,9 +252,9 @@
 									operacijama.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
 									href="TODO/Index.html"
@@ -276,9 +276,9 @@
 									administratore.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
 									href="Sistem_za_rezervacije/Index.html"
@@ -301,9 +301,9 @@
 									kontakte, sastanke i prodaju.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
 									href="CRM/index.html"
@@ -324,9 +324,9 @@
 									Online platforma za povezivanje pružaoca usluga sa klijentima.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
 									href="services-platform/index.html"
@@ -395,10 +395,9 @@
 									podržava više streaming servisa.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
-									
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
 									href="Filmovi/index.html"
@@ -444,10 +443,9 @@
 									Digitalni pravoslavni kalendar sa pregledom praznika, postova i svetaca za svaki dan u godini.
 								</p>
 								<div class="d-flex gap-2 mb-3">
-									<span class="badge bg-primary">PHP</span>
-									<span class="badge bg-secondary">MySQL</span>
-									<span class="badge bg-info">Bootstrap</span>
-									
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a href="pravoslavni-kalendar/index.html" class="btn btn-outline-primary w-100" target="_blank">
 									Pogledaj Projekat
@@ -499,84 +497,164 @@
 			</div>
 		</section>
 
-		<!-- Kontakt Sekcija -->
-		<section id="contact" class="py-5">
-			<div class="container">
-				<h2 class="text-center display-5 mb-5">Hajde da Sarađujemo!</h2>
-				<div class="row justify-content-center">
-					<div class="col-lg-8">
-						<div class="card border-0 shadow-sm">
-							<div class="card-body p-5">
-								<form>
-									<div class="mb-4">
-										<label for="name" class="form-label">Vaše Ime</label>
-										<input
-											type="text"
-											class="form-control"
-											id="name"
-											required
-										/>
-									</div>
-									<div class="mb-4">
-										<label for="email" class="form-label">Email Adresa</label>
-										<input
-											type="email"
-											class="form-control"
-											id="email"
-											required
-										/>
-									</div>
-									<div class="mb-4">
-										<label for="message" class="form-label">Vaša Poruka</label>
-										<textarea
-											class="form-control"
-											id="message"
-											rows="5"
-											required
-										></textarea>
-									</div>
-									<button type="submit" class="btn btn-primary btn-lg w-100">
-										Pošalji Poruku ✉️
-									</button>
-								</form>
-							</div>
-						</div>
-						<div class="text-center mt-4">
-							<div class="d-flex justify-content-center gap-4">
-								<a href="#" class="text-decoration-none">
-									<i class="fab fa-github fa-2x"></i>
-								</a>
-								<a href="#" class="text-decoration-none">
-									<i class="fab fa-linkedin fa-2x"></i>
-								</a>
-								<a href="#" class="text-decoration-none">
-									<i class="fas fa-envelope fa-2x"></i>
-								</a>
-							</div>
-						</div>
-					</div>
+	<!-- Kontakt Sekcija -->
+	<section id="contact" class="py-5">
+		<div class="container">
+		<h2 class="text-center display-5 mb-5">Dostupan za Nove Projekte</h2>
+		<p class="text-center text-secondary mb-4 lead">Specijalizujem se za razvoj web aplikacija koristeći PHP, Laravel i moderne JavaScript tehnologije</p>
+		
+		<!-- Tipovi Projekata -->
+		<div class="row g-4 mb-5">
+			<div class="col-md-4">
+				<div class="text-center p-4 h-100 border rounded">
+					<i class="fas fa-shopping-cart fa-3x text-primary mb-3"></i>
+					<h5>E-Commerce Rešenja</h5>
+					<p class="text-secondary small">Online prodavnice sa kompletnim sistemom narudžbina, plaćanja i upravljanja proizvodima</p>
 				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="text-center p-4 h-100 border rounded">
+					<i class="fas fa-users fa-3x text-primary mb-3"></i>
+					<h5>CRM & Business Sistemi</h5>
+					<p class="text-secondary small">Prilagođena poslovna rešenja za upravljanje klijentima, projektima i internim procesima</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="text-center p-4 h-100 border rounded">
+					<i class="fas fa-code fa-3x text-primary mb-3"></i>
+					<h5>Web Aplikacije</h5>
+					<p class="text-secondary small">Moderne, responsive web aplikacije sa bogatim funkcionalnostima i intuitivnim interfejsom</p>
+				</div>
+			</div>
+		</div>
 			</div>
 		</section>
 
-		<!-- Footer sekcija -->
-		<footer class="bg-dark text-white py-4">
-			<div class="container text-center">
-				<p class="mb-0">
-					🚀 Napravljeno sa puno entuzijazma i ☕ | &copy;
-					<span id="currentYear"></span> Đorđe Živanović. Sva prava zaštićena. |
-					All rights reserved - Agencija Sprint
-				</p>
-			</div>
-		</footer>
+	<!-- Footer sekcija -->
+	<footer class="footer-modern bg-dark text-white py-5">
+		<div class="container">
+			<div class="row g-4 mb-4">
+				<!-- O Meni Kolona -->
+				<div class="col-lg-4 col-md-6">
+					<h5 class="mb-4 fw-bold">
+						<i class="fab fa-php me-2 text-primary"></i>
+						Đorđe Živanović
+					</h5>
+					<p class="text-light opacity-75 mb-4">
+						PHP Developer specijalizovan za razvoj modernih web aplikacija. 
+						Fokusiram se na kvalitet, čist kod i rešenja koja funkcionišu.
+					</p>
+					<div class="social-links d-flex gap-3">
+						<a href="https://github.com/djoleajk" class="social-icon" target="_blank" title="GitHub">
+							<i class="fab fa-github fa-lg"></i>
+						</a>
+						<a href="https://linkedin.com/in/djordje-zivanovic" class="social-icon" target="_blank" title="LinkedIn">
+							<i class="fab fa-linkedin fa-lg"></i>
+						</a>
+					<a href="https://www.facebook.com/djordjeajkzivanovic/" class="social-icon" target="_blank" title="Facebook">
+						<i class="fab fa-facebook fa-lg"></i>
+					</a>
+					</div>
+				</div>
 
-		<!-- Dodajemo JavaScript pre zatvaranja body taga -->
-		<script>
-			// Automatsko ažuriranje godine u footer-u
-			const year = new Date().getFullYear();
-			document.getElementById("currentYear").textContent = year;
-			document.getElementById("currentYear2").textContent = year;
-		</script>
+				<!-- Brzi Linkovi -->
+				<div class="col-lg-2 col-md-6">
+					<h5 class="mb-4 fw-bold">Navigacija</h5>
+					<ul class="list-unstyled footer-links">
+						<li class="mb-3">
+							<a href="#home" class="text-light text-decoration-none">
+								<i class="fas fa-chevron-right me-2"></i>Početna
+							</a>
+						</li>
+						<li class="mb-3">
+							<a href="#about" class="text-light text-decoration-none">
+								<i class="fas fa-chevron-right me-2"></i>O Meni
+							</a>
+						</li>
+						<li class="mb-3">
+							<a href="#projects" class="text-light text-decoration-none">
+								<i class="fas fa-chevron-right me-2"></i>Projekti
+							</a>
+						</li>
+						<li class="mb-3">
+							<a href="#contact" class="text-light text-decoration-none">
+								<i class="fas fa-chevron-right me-2"></i>Kontakt
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<!-- Tehnologije -->
+				<div class="col-lg-3 col-md-6">
+					<h5 class="mb-4 fw-bold">Tehnologije</h5>
+					<div class="tech-list">
+						<div class="d-flex align-items-center mb-3">
+							<i class="fab fa-php fa-2x text-primary me-3"></i>
+							<span>PHP & Laravel</span>
+						</div>
+						<div class="d-flex align-items-center mb-3">
+							<i class="fas fa-database fa-2x text-primary me-3"></i>
+							<span>MySQL & PostgreSQL</span>
+						</div>
+						<div class="d-flex align-items-center mb-3">
+							<i class="fab fa-js fa-2x text-primary me-3"></i>
+							<span>JavaScript & ES6+</span>
+						</div>
+						<div class="d-flex align-items-center mb-3">
+							<i class="fab fa-bootstrap fa-2x text-primary me-3"></i>
+							<span>Bootstrap & CSS3</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- Kontakt Informacije -->
+				<div class="col-lg-3 col-md-6">
+					<h5 class="mb-4 fw-bold">Kontakt</h5>
+					<ul class="list-unstyled contact-info">
+						<li class="mb-3 d-flex align-items-start">
+							<i class="fas fa-envelope text-primary me-3 mt-1"></i>
+							<a href="mailto:djoleajkzivanovic@gmail.com" class="text-light text-decoration-none footer-link">
+								djoleajkzivanovic@gmail.com
+							</a>
+						</li>
+						<li class="mb-3 d-flex align-items-start">
+							<i class="fas fa-phone text-primary me-3 mt-1"></i>
+							<a href="tel:+381658560207" class="text-light text-decoration-none footer-link">
+								065 85 60 207
+							</a>
+						</li>
+						<li class="mb-3 d-flex align-items-start">
+							<i class="fas fa-map-marker-alt text-primary me-3 mt-1"></i>
+							<span class="text-light">Srbija</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<!-- Copyright -->
+			<div class="border-top border-secondary pt-4 mt-4">
+				<div class="row align-items-center">
+					<div class="col-md-6 text-center text-md-start mb-2 mb-md-0">
+						<small class="text-light opacity-75">
+							&copy; <span id="currentYear"></span> Đorđe Živanović. Sva prava zadržana.
+						</small>
+					</div>
+					<div class="col-md-6 text-center text-md-end">
+						<small class="text-light opacity-75">
+							Napravljeno sa ❤️ i ☕ | Agencija Sprint
+						</small>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<!-- Dodajemo JavaScript pre zatvaranja body taga -->
+	<script>
+		// Automatsko ažuriranje godine u footer-u
+		const year = new Date().getFullYear();
+		document.getElementById("currentYear").textContent = year;
+	</script>
 
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
