--- a/index.html
+++ b/index.html
@@ -487,12 +487,32 @@
 									<span class="badge bg-info">JavaScript</span>
 									<span class="badge bg-secondary">CSS</span>
 								</div>
-								<a href="kalkulator-proizvodnje/index.html" class="btn btn-outline-primary w-100" target="_blank">
-									Pogledaj Projekat
-								</a>
-							</div>
-						</div>
-					</div>
+				<a href="kalkulator-proizvodnje/index.html" class="btn btn-outline-primary w-100" target="_blank">
+					Pogledaj Projekat
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<!-- Kladionica Project -->
+	<div class="col-md-6 col-lg-4">
+		<div class="card h-100 border-0 shadow-sm">
+			<div class="card-body">
+				<h5 class="card-title">Kladionica</h5>
+				<p class="card-text">
+					Interaktivna web aplikacija za sportsko klađenje sa live prikazom mečeva, kvotama i statistikama. Sistem omogućava postavljanje tiketa i praćenje rezultata.
+				</p>
+				<div class="d-flex gap-2 mb-3">
+					<span class="badge bg-primary">HTML</span>
+					<span class="badge bg-info">JavaScript</span>
+					<span class="badge bg-secondary">CSS</span>
+				</div>
+				<a href="kladionica/index.html" class="btn btn-outline-primary w-100" target="_blank">
+					Pogledaj Projekat
+				</a>
+			</div>
+		</div>
+	</div>
 				</div>
 			</div>
 		</section>
