--- a/kladionica/index.html
+++ b/kladionica/index.html
@@ -15,7 +15,11 @@
                 <h1>Sportska Kladionica</h1>
             </div>
             <div class="header-info">
-                <span id="currentDate"></span>
+                <div class="user-info">
+                    <span id="userName" class="user-name">👤 Korisnik</span>
+                    <span id="userBalance" class="user-balance">💰 0 RSD</span>
+                </div>
+                <button id="logoutBtn" class="logout-btn" title="Odjavi se">🚪 Odjava</button>
             </div>
         </div>
     </header>
