--- a/kladionica/admin.html
+++ b/kladionica/admin.html
@@ -259,7 +259,7 @@
             </div>
             <div class="header-info">
                 <span id="adminName" class="user-name">👤 Administrator</span>
-                <button id="logoutBtn" class="logout-btn" title="Odjavi se">🚪 Odjava</button>
+                <button id="logoutBtn" class="logout-btn" onclick="logout()" title="Odjavi se">🚪 Odjava</button>
             </div>
         </div>
     </header>
