--- a/kladionica/index.html
+++ b/kladionica/index.html
@@ -19,7 +19,7 @@
                     <span id="userName" class="user-name">👤 Korisnik</span>
                     <span id="userBalance" class="user-balance">💰 0 RSD</span>
                 </div>
-                <button id="logoutBtn" class="logout-btn" title="Odjavi se">🚪 Odjava</button>
+                <button id="logoutBtn" class="logout-btn" onclick="logout()" title="Odjavi se">🚪 Odjava</button>
             </div>
         </div>
     </header>
