--- a/kladionica/login.html
+++ b/kladionica/login.html
@@ -315,6 +315,11 @@
                     <p><strong>Korisnik:</strong> admin</p>
                     <p><strong>Lozinka:</strong> admin123</p>
                 </div>
+                <p style="margin-top: 15px; text-align: center;">
+                    <a href="demo.html" style="color: var(--gold); text-decoration: none; font-weight: 600;">
+                        📚 Pogledaj Demo i Primere →
+                    </a>
+                </p>
             </div>
         </div>
     </div>
