--- a/index.html
+++ b/index.html
@@ -218,6 +218,29 @@
 			<div class="container">
 				<h2 class="text-center display-5 mb-5">Moji Projekti</h2>
 				<div class="row g-4">
+					<!-- Sprint Marketing Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Sprint Marketing</h5>
+								<p class="card-text">
+									Moderna landing stranica za agenciju digitalnog marketinga sa animacijama i interaktivnim elementima.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="sprintmarketing/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
+
 					<!-- Blog System Project -->
 					<div class="col-md-6 col-lg-4">
 						<div class="card h-100 border-0 shadow-sm">
